--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,45 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+body {
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow-y: auto;
+  height: 90vh !important;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.main-body {
+  max-width: 500px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.main-body2 {
+  background-color: #00000021;
+  padding: 50px;
+  border-radius: 5px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.main-body input {
+  border: 1px solid rgba(0, 0, 0, 0.219);
+  width: 100%;
+  padding: 10px 15px;
+  border-radius: 5px;
+  background-color: #fff;
+  outline: none;
 }
 
-.card {
-  padding: 2em;
+.main-body label {
+  display: block;
+  font-family: roboto;
+  padding: 0;
+  margin: 0 !important;
 }
 
-.read-the-docs {
-  color: #888;
+.main-body button {
+  padding: 10px 20px;
+  border-radius: 5px;
+  background-color: #4caf50;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+  width: 100%;
+  border: none;
 }
