--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,13 @@ body {
   height: 90vh !important;
 }
 
+.body {
+  margin: auto;
+  display: grid;
+  max-width: 80%;
+  grid-template-columns: 1fr 1fr;
+}
+
 .main-body {
   max-width: 500px;
 }
